--- a/docs/TheoryDocs/chapter5.tex
+++ b/docs/TheoryDocs/chapter5.tex
@@ -444,7 +444,8 @@ and
   \quad
   \bar{\epsilon} = \frac{\epsilon_s + \epsilon_{s+1}}{2}.
 \end{equation}
-The symbols $c_3$ and $d_3$ used above are defined in Chapter~\ref{chap:mpgf}.
+The symbols $c_3$ and $d_3$ used above are defined in Equations~\ref{eq:cdef}
+and \ref{eq:ddef}.
 
 
 
@@ -614,8 +615,8 @@ where
 \end{subequations}
 and
 \begin{equation}
-    c_3\eye = c_3(\mu_i,\epsilon_i,\mu_i,\epsilon_i), \quad
-    d_3\eye = d_3(\mu_i,\epsilon_i,\mu_i,\epsilon_i).
+    c_3\eye = c_3(\epsilon_i,\mu_i,\epsilon_i,\mu_i), \quad
+    d_3\eye = d_3(\epsilon_i,\mu_i,\epsilon_i,\mu_i).
 \end{equation}
 
 \section{FFT Evaluation of the Modal Difference Series}
