--- a/docs/TheoryDocs/chapter6.tex
+++ b/docs/TheoryDocs/chapter6.tex
@@ -4,13 +4,13 @@
 \section{Introduction}
 
 
-In Chapter~ref{chap:gfstratified} a method was presented to efficiently evaluate the
+In Chapter~\ref{chap:gfstratified} a method was presented to efficiently evaluate the
 potential Green's functions for a multiply stratified medium under
-quasi-periodic boundary conditions.  In order to make use of this
-Green's function in a periodic moment method procedure, it is also
+quasi-periodic boundary conditions.  In order to make use of the
+Green's functions in a periodic moment method procedure, it is also
 necessary to compute the incident fields and pick off the scattering
 matrix entries for the multiply stratified medium.  This chapter provides
-solutions for these tasks.
+the framework for these tasks.
 
 We will assume that the single FSS sheet is located at interface
 number $s$, located between layers $s$ and $s+1$, where $1 \leq s < N.$
