Change Appendix Equation Numbering
Added threading to modal series


Change \rho_r to Vector of MV2s


Add Ring iterator type instead of rings() function

Used in PGF.jl
Corrected initialization of \rho_r Sheets.jl
Add Zint.jl

Also add tests for Rings.jl
Added additional reference for 7-point cubature


Added @optlevel 3 for PSSFSS


Rearranged comments


More digits on cubature coefficients

Also removed vtxcrd! since it's incompatible with threading
Added tests for filljk!

Requires the Cubature package
Updated documentation, Manifest.toml, and Project.toml


Add Constants.jl, FillZY.jl


Added files from sandbox


Documentation correction

`class` is `Char` not `String`
Updated manifest.toml

Also stopped tracking theorydoc.out
Documentation update

Added reference to Redheffer.
Added libertine option to newtx fonts
Added pstricks-add
Added packages

BSON, BandedMatrices, JLD2
Add Gsm.jl

Updated Constants.jl with comments
Added Gsm.jl
Use JLD2 for reading/writing sheet files
New Base.show method for Layer


Renamed Gsm module to GSMs

--- a/docs/TheoryDocs/chapter3.tex
+++ b/docs/TheoryDocs/chapter3.tex
@@ -676,6 +676,8 @@ so that the composite scattering matrix is
     \mat{B}^{22} + \mat{B}^{21}\mat{A}^{22} \mat{G}^{BA} \mat{B}^{12}
   \end{bmatrix}.
 \end{equation}
+The result in \eqref{eq:Scomposite} is sometimes written as $\mat{S} = \mat{A} \star \mat{B}$ where
+$\star$ is the \emph{Redheffer star product} \cite{redh:61}.
 
 \subsection{Device~A is a Dielectric Slab}
 In the case where device~$A$ is just a dielectric slab, we have
