--- a/docs/TheoryDocs/chapter5.tex
+++ b/docs/TheoryDocs/chapter5.tex
@@ -84,7 +84,7 @@ We will conntinue the use of the shorthand notation $\displaystyle \summn$ to de
 the double sum $\displaystyle \sum_{m=-\infty}^{\infty} \sum_{n=-\infty}^{\infty}.$
 
 
-As in the Chapter~\ref{chap:mpgf} we are interested in determining the
+As in Chapter~\ref{chap:mpgf} we are interested in determining the
 potential Green's functions
 $G^A_{xx}(\vecrho-\vecrho',z,z'),$ 
 $G^F_{xx}(\vecrho-\vecrho',z,z'),$ 
@@ -118,7 +118,7 @@ We now define a quasi-periodic%
   incremental phase shifts $\psi_1$ and $\psi_2$
   applied to the otherwise periodic function.}%
 %
-function $f_p$ as
+\ function $f_p$ as
 \begin{equation}
   f_p(\vecrho) = \summn f(\vecrho - m\s_1 - n\s_2) e^{-j(m\psi_1+n\psi_2)}
 \end{equation}
