--- a/docs/TheoryDocs/chapter6.tex
+++ b/docs/TheoryDocs/chapter6.tex
@@ -633,9 +633,9 @@ current there is equal to the admittance seen at that point:
 \begin{subequations}
 \begin{align}
   \Vv^{p}(\vecbeta_{m_q,n_q},z_s^-,z_s) &= -1, \quad
-  \Iv^{p}(\vecbeta_{m_q,n_q},z_s^-,z_s) = \Yleft(z_s) = 1/\Zleft(z_s), \\
+  \Iv^{p}(\vecbeta_{m_q,n_q},z_s^-,z_s) = \Yleft(z_s^-) = 1/\Zleft(z_s^-), \\
   \Vv^{p}(\vecbeta_{m_q,n_q},z_s^+,z_s) &= 1, \quad \hphantom{-}
-  \Iv^{p}(\vecbeta_{m_q,n_q},z_s^+,z_s) = \Yright(z_s) = 1/\Zright(z_s).
+  \Iv^{p}(\vecbeta_{m_q,n_q},z_s^+,z_s) = \Yright(z_s^+) = 1/\Zright(z_s^+).
 \end{align}
 \end{subequations}
 With the voltage and current known at $z_s$, one can apply 
