--- a/docs/TheoryDocs/chapter7.tex
+++ b/docs/TheoryDocs/chapter7.tex
@@ -674,7 +674,7 @@ each observation point / source triangle pair.  These integrals,
 when weighted according to Equation~\eqref{eq:Lit} contribute
 to as many as nine entries of $\mat{Z}$, depending on the number of basis 
 functions defined in each triangle.  They are computed using the seven-point
-cubature formula from \cite{zien:71},
+cubature formula found in, e.g., \cite{zien:71} or \cite{bali:84}.
 \begin{equation}
     \int_0^1 \int_0^{1-\eta} \!\!\!
   f(\xi, \eta) \; \d\xi \; \d\eta \approx \sum_{k=1}^7 w_k f(\xi_k, \eta_k).
@@ -688,13 +688,13 @@ The sample points and weights are given in Table~\ref{tab:tri}.
       {\boldmath $\xi_k$} \unboldmath  & 
       {\boldmath $\eta_k$ \unboldmath} & {\boldmath $w_k$ \unboldmath} 
       \\ \hline
-      1 & 0.33333333    & 0.33333333    & 0.112500000 \\
-      2 & 0.05971587    & 0.47014206    & 0.066197075 \\
-      3 & 0.47014206    & 0.05971587    & 0.066197075 \\
-      4 & 0.47014206    & 0.47014206    & 0.066197075 \\
-      5 & 0.79742699    & 0.10128651    & 0.062969590 \\
-      6 & 0.10128651    & 0.79742699    & 0.062969590 \\
-      7 & 0.10128651    & 0.10128651    & 0.062969590 \\
+      1 & 0.33333333333333333 & 0.33333333333333333 & 0.11250000000000000 \\
+      2 & 0.10128650732345633 & 0.79742698535308730 & 0.06296959027241358 \\
+      3 & 0.79742698535308730 & 0.10128650732345633 & 0.06296959027241358 \\
+      4 & 0.10128650732345633 & 0.10128650732345633 & 0.06296959027241358 \\
+      5 & 0.47014206410511505 & 0.05971587178976989 & 0.06619707639425308 \\
+      6 & 0.05971587178976989 & 0.47014206410511505 & 0.06619707639425308 \\
+      7 & 0.47014206410511505 & 0.47014206410511505 & 0.06619707639425308 \\
       \hline 
     \end{tabular}
   \end{center}
@@ -776,7 +776,7 @@ product
 \begin{equation}
   \innerprod{Z_s \f_n/l_n,\f_m/l_m}.
 \end{equation}
-Note that in most cases basis functions $m$ and $n$  do share any
+Note that in most cases basis functions $m$ and $n$ do not share any
 common support and the inner product yields zero.  
 Otherwise, two cases remain. Either
 $n=m$, or $n \neq m$ with edges $n$ and $m$  common to a single
@@ -974,11 +974,11 @@ Equation~\eqref{eq:HMPIE} as closely as possible.
 We choose our testing functions to be the same as our basis functions 
 (Galerkin's method).  Then taking the inner product of \eqref{eq:HMPIE}
 with each of the functions $\f_m/l_m$  for $m = 1,2,\ldots, N_M$ yields
-\begin{multline}
+\begin{equation}
   -j\omega \innerprod{\F,\f_m/l_m} + \innerprod{\gradient\Psi,\f_m/l_m}
-  = \innerprod{\H\inc, \f_m/l_m}, \\
+  = \innerprod{\H\inc, \f_m/l_m}, \qquad
   m = 1, 2, \ldots,  N_M.   \label{eq:Hmom}
-\end{multline}  
+\end{equation}  
 We approximate the inner products in the same manner as was done for
 the case of electric sources:
 \begin{equation}
@@ -1121,7 +1121,7 @@ as
   \Psi_i^{uv} = \frac{\pm 2 j e^{j\theta^{\pm}_i}}{\pi\omega\tilde{\mu}} 
   \Biggl[
   \frac{\pi\tilde{\mu}}{\mu_0}  
-  I_{2i}^{'uv} + 
+  I_{2}^{'uv} + 
   \frac{1}{2A^v}  \! \iint_{T^v}  \!
       \frac{\d S'}{\rhocu_{00}} +
       u J_i^{uv} +
@@ -1134,16 +1134,16 @@ as
  \end{equation}
 where
 \begin{equation}
-     \I_{2i}^{'uv} =
+     I_{2}^{'uv} =
      \frac{1}{2A^v}  \iint_{T^v}  \!\!\!
      \Sigma'_{M2}(\rcu;\r')
-     \, \vecrho_i \; \d S' 
+     \; \d S' 
 \end{equation}
 and $\Sigma'_{M2}$ is defined in Equation~\eqref{eq:finalmodalmagnetic}.
 
 All of the integrals in \eqref{eq:Psiiuv2} have been previously
-discussed.  Note that the only frequency dependence occurs in the
-terms $\I_{2i}^{'uv}$ and $d_3$. 
+discussed.  Note that the only frequency dependence (apart from the leading factor of
+$1/\omega$) occurs in the terms $I_{2}^{'uv}$ and $d_3$. 
 
   
 \subsection{\label{subsec:gcm}Generalized Current Vector}
