Add forward reference

--- a/docs/TheoryDocs/chapter6.tex
+++ b/docs/TheoryDocs/chapter6.tex
@@ -276,7 +276,8 @@ Using the results of \cite{mimo:97} we find that they are given by
   {A c_q\enn} 
 \end{align}
 \end{subequations}
-where $V_i^p$ is the transmission line Green's function for the
+where $\t_q$ is the modal polarization vector defined in \eqref{eq:tdef}, and $V_i^p$ is the
+transmission line Green's function for the
 voltage due to a unit current source for either the TE ($p=1$) or TM
 ($p=2$) equivalent circuit, shown in Figure~\ref{fig:equiv3}.
 \begin{figure}[tbp]
