Add references to Green's function formulation

--- a/docs/TheoryDocs/chapter4.tex
+++ b/docs/TheoryDocs/chapter4.tex
@@ -369,8 +369,8 @@ integrated in closed form, as in \cite{wrgs:84}.
 accelerate the series for efficient evaluation.
 
 \section{Series Acceleration}
-  We now manipulate the series in Equations~\eqref{eq:allpots} to
-  arrive at an efficient, 
+We now manipulate the series in Equations~\eqref{eq:allpots} to
+arrive at an efficient, 
 wide-band formulation.  In the process, the Green's functions will be
 expressed as the sum of several absolutely, uniformly convergent
 series.  Our strategy is to find the first few terms of an asymptotic
@@ -383,6 +383,14 @@ spatial sum) after which it is recombined
 with the spectral sum.  A careful choice of the expansion variable ensures
 that all sums are rapidly convergent and  provides
 the wide-band capability described below.
+
+The basic idea used here is based on the approach presented in \cite{srzw:90}, where a first-order Kummer's
+transformation is applied to the free-space periodic Green's function. 
+The technique was extended to a second-order transformation primarily by Kim McInturff of Raytheon Electromagnetic
+Systems Division and was presented in \cite{smjj:91} and \cite{smjs:92}.
+The extension of the technique to periodic sources
+in stratified media is due to the present author and was first presented in \cite{simo:01b}.
+
 
 \subsection{Kummer's Transformation}
 Let $u>0$ 
