--- a/docs/TheoryDocs/pssfss.bib
+++ b/docs/TheoryDocs/pssfss.bib
@@ -5602,6 +5602,17 @@ url = {http://www.vcnet.com/simonp/papers/2004_aiaa_paper.pdf}
    kwds = "Horn, Eggcrate, cross-septa"
 }
 
+@INPROCEEDINGS{smjs:92,
+  author={P. S. {Simon} and K. {McInturff} and R. W. {Jobsky} and K. C. {Smith}},
+  booktitle={IEEE Antennas and Propagation Society International Symposium 1992 Digest}, 
+  title={Efficient analysis of periodic structures using a wide-band formulation of the Helmholtz Green's function}, 
+  year={1992},
+  volume={},
+  number={},
+  pages={192-195 vol.1},
+  doi={10.1109/APS.1992.221969}}
+
+
 
 @manual{sore:95,
    title = "Manual for POS ver.\ 3.5: Physical Optics Single Reflector Shaping Program",
@@ -5662,6 +5673,16 @@ url = {http://www.vcnet.com/simonp/papers/2004_aiaa_paper.pdf}
    annote = "Describes techniques for creating circular polarization
 		  in waveguide feeds."
 }
+
+@inproceedings{smjj:91,
+  title={Full-wave analysis of an infinite, planar array of linearly polarized, stripline-fed, tapered notch elements},
+  author={Simon, Peter S and Mcinturff, Kim and Jobsky, Robert W and Johnson, Deron L},
+  booktitle={Antennas and Propagation Society Symposium 1991 Digest},
+  pages={334--337},
+  year={1991},
+  organization={IEEE}
+}
+
 @inproceedings{smjt:89,
    title = "Moment method analysis of a stripline-fed finite slot
 		  using subdomain basis functions",
