--- a/docs/TheoryDocs/theorydoc.tex
+++ b/docs/TheoryDocs/theorydoc.tex
@@ -25,7 +25,7 @@ openany, % A chapter may start on either a recto or verso page.
 % \usepackage[libertine]{newtxtext}
 % \usepackage[libertine]{newtxmath}
 %\usepackage{dutchcal} % For lower-case calligraphic
-\usepackage{boondox-calo} % For lower-case calligraphic
+\usepackage{BOONDOX-calo} % For lower-case calligraphic
 \usepackage{pstricks,pst-node,pstricks-add}
 \usepackage{multido}
 \usepackage{url}
