--- a/docs/notebooks/band_pass_filter.ipynb
+++ b/docs/notebooks/band_pass_filter.ipynb
@@ -33,7 +33,7 @@
     "constant 1.9.  Outboard of each sheet is a 1.1 cm layer of dielectric constant 1.3.\n",
     "The closely spaced sheets are a good test of the generalized scattering formulation\n",
     "implemented in PSSFSS.  The sheet geometry is shown below.  Remember that the entire\n",
-    "sheet is metallized *except* for the region of the triangulation."
+    "sheet is metalized *except* for the region of the triangulation."
    ],
    "metadata": {}
   },
