--- a/docs/notebooks/cross_on_dielectric_substrate.ipynb
+++ b/docs/notebooks/cross_on_dielectric_substrate.ipynb
@@ -12,7 +12,7 @@
     "were digitized.\n",
     "\n",
     "We use the `loadedcross` element where we choose `w > L2/2`, so that the Cross\n",
-    "is \"unloaded\", i.e. the center section is filled in with metallization:"
+    "is \"unloaded\", i.e. the center section is filled in with metalization:"
    ],
    "metadata": {
     "name": "A slide ",
