--- a/docs/notebooks/manual.ipynb
+++ b/docs/notebooks/manual.ipynb
@@ -44,7 +44,7 @@
     "which are assumed to be semi-infinite).  There are $N-1$ junction planes\n",
     "separating the layers. At some of these junction planes there may exist\n",
     "frequency selective surfaces (FSSs) or polarization selective surfaces (PSSs)\n",
-    "consisting of zero-thickness periodic patterns of metallization.\n",
+    "consisting of zero-thickness periodic patterns of metalization.\n",
     "PSSFSS will determine the generalized scattering matrix (GSM) for this structure\n",
     "which fully characterizes it in terms of illumination by an incoming plane wave\n",
     "of arbitrary polarization incident from either Region $1$ or Region $N$."
@@ -447,6 +447,13 @@
     "1 cm.  The triangulation uses 10 edges in the x and y directions (`Nx` and `Ny`).\n",
     "\n",
     "You can get documentation for `rectstrip` by typing `?rectstrip` at the Julia prompt.\n",
+    "`rectstrip` can be used to model dipoles, strip grids, ground planes, rectangular reflectarray elements, and rectangular\n",
+    "patch elements.\n",
+    "A call to `rectstrip` generates a rectangular strip, which by default (i.e. when `rot=0`) is oriented with its sides parallel\n",
+    "to the x and y axes.  It should be noted that it is permissible for either or both strip side lengths to be equal to\n",
+    "the corresponding unit cell dimension (i.e. `Lx==Px` and/or `Ly==Py`).  Currently, this is the only way to model an\n",
+    "imperfectly conducting ground plane (`Rsheet` > 0) that completely fills the unit cell.\n",
+    "\n",
     "Other FSS/PSS element types: `pecsheet`, `pmcsheet`, `polyring`, `meander`, `loadedcross`,\n",
     "`jerusalemcross`."
    ],
