--- a/docs/notebooks/resistive_square_patch.ipynb
+++ b/docs/notebooks/resistive_square_patch.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "## Resistive Square Patch\n",
     "This example will demonstrate the ability of PSSFSS to accurately model finite\n",
-    "conductivity of FSS metallization.  It consists of a square finitely conducting\n",
+    "conductivity of FSS metalization.  It consists of a square finitely conducting\n",
     "patch in a square lattice.  It is taken from a paper by Alon S. Barlevy and\n",
     "Yahya Rahmat-Samii,\n",
     "\"Fundamental Constraints on the Electrical Characteristics of Frequency Selective\n",
