--- a/docs/notebooks/symmetric_strip.ipynb
+++ b/docs/notebooks/symmetric_strip.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "source": [
     "We can also analyze the same structure using magnetic currents in the areas free of\n",
-    "metallization as the unknowns:"
+    "metalization as the unknowns:"
    ],
    "metadata": {}
   },
