Add meanderline plots to cpss example

--- a/docs/notebooks/cpss_optimization.ipynb
+++ b/docs/notebooks/cpss_optimization.ipynb
@@ -39,27 +39,12 @@
     "# Define convenience functions for sheets:\n",
     "outer(rot) = meander(a=3.97, b=3.97, w1=0.13, w2=0.13, h=2.53+0.13, units=mm, ntri=600, rot=rot)\n",
     "inner(rot) = meander(a=3.97*√2, b=3.97/√2, w1=0.1, w2=0.1, h=0.14+0.1, units=mm, ntri=600, rot=rot)\n",
-    "center(rot) = meander(a=3.97, b=3.97, w1=0.34, w2=0.34, h=2.51+0.34, units=mm, ntri=600, rot=rot)"
-   ],
-   "metadata": {},
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Note our definition of `h` differs from that of the reference by the width of the strip."
-   ],
-   "metadata": {}
-  },
-  {
-   "outputs": [],
-   "cell_type": "code",
-   "source": [
+    "center(rot) = meander(a=3.97, b=3.97, w1=0.34, w2=0.34, h=2.51+0.34, units=mm, ntri=600, rot=rot)\n",
+    "# Note our definition of `h` differs from that of the reference by the width of the strip.\n",
     "t1 = 4mm # Outer layers thickness\n",
     "t2 = 2.45mm # Inner layers thickness\n",
     "substrate = Layer(width=0.1mm, epsr=2.6)\n",
     "foam(w) = Layer(width=w, epsr=1.05) # Foam layer convenience function\n",
-    "\n",
     "rot0 = 0 # rotation of first sheet\n",
     "strata = [\n",
     "    Layer()\n",
@@ -80,9 +65,44 @@
     "    Layer() ]\n",
     "steering = (θ=0, ϕ=0)\n",
     "flist = 10:0.1:20\n",
-    "\n",
+    "#\n",
     "results = analyze(strata, flist, steering, showprogress=false,\n",
     "                  resultfile=devnull, logfile=devnull);"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Here are plots of the three distinct meanderline designs:"
+   ],
+   "metadata": {}
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "using Plots\n",
+    "plot(outer(0), unitcell=true, title=\"Outer Meanderline\")"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "plot(inner(0), unitcell=true, title=\"Inner Meanderline\")"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "plot(center(0), unitcell=true, title=\"Center Meanderline\")"
    ],
    "metadata": {},
    "execution_count": null
@@ -106,7 +126,8 @@
     "AR21L = extract_result(results, @outputs ar21db(L))\n",
     "\n",
     "default(lw=2, xlim=(10,20), xtick=10:20, ylim=(0,3), ytick=0:0.5:3, gridalpha=0.3)\n",
-    "p = plot(flist,RL11rr,title=\"RHCP → RHCP Return Loss\", label=\"PSSFSS\")\n",
+    "p = plot(flist,RL11rr,title=\"RHCP → RHCP Return Loss\",\n",
+    "         xlabel=\"Frequency (GHz)\", ylabel=\"Return Loss (dB)\", label=\"PSSFSS\")\n",
     "cst = readdlm(\"../src/assets/cpss_cst_fine_digitized_rl.csv\", ',')\n",
     "plot!(p, cst[:,1], cst[:,2], label=\"CST\")\n",
     "comsol = readdlm(\"../src/assets/cpss_comsol_fine_digitized_rl.csv\", ',')\n",
@@ -119,7 +140,8 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "p = plot(flist,AR11r,title=\"RHCP → RHCP Reflected Axial Ratio\", label=\"PSSFSS\")\n",
+    "p = plot(flist,AR11r,title=\"RHCP → RHCP Reflected Axial Ratio\",\n",
+    "         xlabel=\"Frequency (GHz)\", ylabel=\"Axial Ratio (dB)\", label=\"PSSFSS\")\n",
     "cst = readdlm(\"../src/assets/cpss_cst_fine_digitized_ar_reflected.csv\", ',')\n",
     "plot!(p, cst[:,1], cst[:,2], label=\"CST\")\n",
     "comsol = readdlm(\"../src/assets/cpss_comsol_fine_digitized_ar_reflected.csv\", ',')\n",
@@ -132,7 +154,8 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "p = plot(flist,IL21L,title=\"LHCP → LHCP Insertion Loss\", label=\"PSSFSS\")\n",
+    "p = plot(flist,IL21L,title=\"LHCP → LHCP Insertion Loss\",\n",
+    "         xlabel=\"Frequency (GHz)\", ylabel=\"Insertion Loss (dB)\", label=\"PSSFSS\")\n",
     "cst = readdlm(\"../src/assets/cpss_cst_fine_digitized_il.csv\", ',')\n",
     "plot!(p, cst[:,1], cst[:,2], label=\"CST\")\n",
     "comsol = readdlm(\"../src/assets/cpss_comsol_fine_digitized_il.csv\", ',')\n",
@@ -145,7 +168,8 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "p = plot(flist,AR21L,title=\"LHCP → LHCP Transmitted Axial Ratio\", label=\"PSSFSS\")\n",
+    "p = plot(flist,AR21L,title=\"LHCP → LHCP Transmitted Axial Ratio\",\n",
+    "         xlabel=\"Frequency (GHz)\", ylabel=\"Axial Ratio (dB)\", label=\"PSSFSS\")\n",
     "cst = readdlm(\"../src/assets/cpss_cst_fine_digitized_ar_transmitted.csv\", ',')\n",
     "plot!(p, cst[:,1], cst[:,2], label=\"CST\")\n",
     "comsol = readdlm(\"../src/assets/cpss_comsol_fine_digitized_ar_transmitted.csv\", ',')\n",
@@ -300,7 +324,7 @@
    "source": [
     "Note that I set the population size to twice the normal default value.  Based\n",
     "on previous experience, using 2 to 3 times the default population size helps the\n",
-    "optimizer better on tough objective functions like the present one.\n",
+    "optimizer to do better on tough objective functions like the present one.\n",
     "I let the optimizer run for 6 hours, during which time it reduced the objective function\n",
     "value from 11.88 dB to 0.86 dB.  It was then interrupted due to a file system error.  I\n",
     "restarted it after setting the starting value to the current best and reducing the\n",
