--- a/docs/notebooks/manual.ipynb
+++ b/docs/notebooks/manual.ipynb
@@ -895,7 +895,7 @@
    "source": [
     "It is often desired to use a set of polarization basis vectors other than TE/TM to define field\n",
     "coefficients.  PSSFSS supports in addition to TE/TM the use of H/V for horizontal/vertical components\n",
-    "(in the [Ludwig 3](https://ieeexplore.ieee.org/document/1140406)) sense, and L/R for left-hand circular\n",
+    "(in the [Ludwig 3](https://ieeexplore.ieee.org/document/1140406) sense), and L/R for left-hand circular\n",
     "and right-hand circular polarization (in the\n",
     "[IEEE sense](https://en.wikipedia.org/wiki/Circular_polarization#Uses_of_the_two_conventions))."
    ],
