Add diagstrip, add orient keyword to meander
And add a new example demonstrating their use

--- a/docs/notebooks/cpss_optimization.ipynb
+++ b/docs/notebooks/cpss_optimization.ipynb
@@ -75,7 +75,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Here are plots of the three distinct meanderline designs:"
+    "Here are plots of the five meanderline sheets:"
    ],
    "metadata": {}
   },
@@ -84,7 +84,7 @@
    "cell_type": "code",
    "source": [
     "using Plots\n",
-    "plot(outer(0), unitcell=true, title=\"Outer Meanderline\")"
+    "plot(outer(rot0), unitcell=true, title=\"Sheet1\")"
    ],
    "metadata": {},
    "execution_count": null
@@ -93,7 +93,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "plot(inner(0), unitcell=true, title=\"Inner Meanderline\")"
+    "plot(inner(rot0-45), unitcell=true, title=\"Sheet2\")"
    ],
    "metadata": {},
    "execution_count": null
@@ -102,10 +102,99 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "plot(center(0), unitcell=true, title=\"Center Meanderline\")"
+    "plot(center(rot0-2*45), unitcell=true, title=\"Sheet3 (Center)\")"
    ],
    "metadata": {},
    "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "plot(inner(rot0-3*45), unitcell=true, title=\"Sheet4\")"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "plot(outer(rot0-4*45), unitcell=true, title=\"Sheet5\")"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Notice that not only are the meanders rotated, but so too are the unit cell rectangles.\n",
+    "This is because we used the generic `rot` keyword argument that rotates the entire unit\n",
+    "cell and its contents. `rot` can be used for any FSS or PSS element type.  As a consequence of\n",
+    "the different rotations applied to each unit cell, interactions between sheets due to higher-order\n",
+    "modes cannot be accounted for; only the dominant $m=n=0$ TE and TM modes are used in cascading\n",
+    "the individual sheet scattering matrices.  This approximation is adequate for sheets that are\n",
+    "sufficiently separated.  We can see from the log file (saved from a previous run where it was not\n",
+    "disabled) that only 2 modes are used to model the interactions between sheets:\n",
+    "\n",
+    "```\n",
+    "Starting PSSFSS analysis on 2021-05-09 at 04:16:07.871\n",
+    "\n",
+    "\n",
+    "******************* Warning ***********************\n",
+    "   Unequal unit cells in sheets 1 and 2\n",
+    "   Setting #modes in dividing layer 3 to 2\n",
+    "******************* Warning ***********************\n",
+    "\n",
+    "\n",
+    "******************* Warning ***********************\n",
+    "   Unequal unit cells in sheets 2 and 3\n",
+    "   Setting #modes in dividing layer 5 to 2\n",
+    "******************* Warning ***********************\n",
+    "\n",
+    "\n",
+    "******************* Warning ***********************\n",
+    "   Unequal unit cells in sheets 3 and 4\n",
+    "   Setting #modes in dividing layer 7 to 2\n",
+    "******************* Warning ***********************\n",
+    "\n",
+    "\n",
+    "******************* Warning ***********************\n",
+    "   Unequal unit cells in sheets 4 and 5\n",
+    "   Setting #modes in dividing layer 9 to 2\n",
+    "******************* Warning ***********************\n",
+    "\n",
+    "\n",
+    "Dielectric layer information...\n",
+    "\n",
+    " Layer  Width  units  epsr   tandel   mur  mtandel modes  beta1x  beta1y  beta2x  beta2y\n",
+    " ----- ------------- ------- ------ ------- ------ ----- ------- ------- ------- -------\n",
+    "     1    0.0000  mm    1.00 0.0000    1.00 0.0000     2  1582.7     0.0     0.0  1582.7\n",
+    " ==================  Sheet   1  ========================  1582.7     0.0     0.0  1582.7\n",
+    "     2    0.1000  mm    2.60 0.0000    1.00 0.0000     0     0.0     0.0     0.0     0.0\n",
+    "     3    4.0000  mm    1.05 0.0000    1.00 0.0000     2  1582.7     0.0     0.0  1582.7\n",
+    " ==================  Sheet   2  ========================   791.3  -791.3  1582.7  1582.7\n",
+    "     4    0.1000  mm    2.60 0.0000    1.00 0.0000     0     0.0     0.0     0.0     0.0\n",
+    "     5    2.4500  mm    1.05 0.0000    1.00 0.0000     2   791.3  -791.3  1582.7  1582.7\n",
+    " ==================  Sheet   3  ========================     0.0 -1582.7  1582.7     0.0\n",
+    "     6    0.1000  mm    2.60 0.0000    1.00 0.0000     0     0.0     0.0     0.0     0.0\n",
+    "     7    2.4500  mm    1.05 0.0000    1.00 0.0000     2     0.0 -1582.7  1582.7     0.0\n",
+    " ==================  Sheet   4  ========================  -791.3  -791.3  1582.7 -1582.7\n",
+    "     8    0.1000  mm    2.60 0.0000    1.00 0.0000     0     0.0     0.0     0.0     0.0\n",
+    "     9    4.0000  mm    1.05 0.0000    1.00 0.0000     2  -791.3  -791.3  1582.7 -1582.7\n",
+    " ==================  Sheet   5  ======================== -1582.7    -0.0     0.0 -1582.7\n",
+    "    10    0.1000  mm    2.60 0.0000    1.00 0.0000     0     0.0     0.0     0.0     0.0\n",
+    "    11    0.0000  mm    1.00 0.0000    1.00 0.0000     2 -1582.7    -0.0     0.0 -1582.7\n",
+    "...\n",
+    "```\n",
+    "\n",
+    "Note that PSSFSS prints warnings to the log file where it is forced to set the number of layer\n",
+    "modes to 2 because of unequal unit cells.  Also, in the dielectric layer list it can be seen\n",
+    "that these layers are assigned 2 modes each.  The thin layers adjacent to sheets are assigned 0\n",
+    "modes because these sheets are incorporated into so-called \"GSM blocks\" or \"Gblocks\" wherein\n",
+    "the presence of the thin layer is accounted for using the stratified medium Green's functions."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -125,7 +214,8 @@
     "IL21L = -extract_result(results, @outputs s21db(L,L))\n",
     "AR21L = extract_result(results, @outputs ar21db(L))\n",
     "\n",
-    "default(lw=2, xlim=(10,20), xtick=10:20, ylim=(0,3), ytick=0:0.5:3, gridalpha=0.3)\n",
+    "default(lw=2, xlim=(10,20), xtick=10:20, ylim=(0,3), ytick=0:0.5:3, gridalpha=0.3,\n",
+    "        framestyle=:box)\n",
     "p = plot(flist,RL11rr,title=\"RHCP → RHCP Return Loss\",\n",
     "         xlabel=\"Frequency (GHz)\", ylabel=\"Return Loss (dB)\", label=\"PSSFSS\")\n",
     "cst = readdlm(\"../src/assets/cpss_cst_fine_digitized_rl.csv\", ',')\n",
@@ -183,13 +273,14 @@
    "source": [
     "The PSSFSS results generally track well with the high-accuracy solutions, but are less accurate\n",
     "especially at the high end of the band, presumably because cascading is performed in PSSFSS\n",
-    "for this structure using only the two principal Floquet modes.  This is necessary because the\n",
+    "for this structure using only the two principal Floquet modes.  As previosly discussed,\n",
+    "this is necessary because the\n",
     "rotated meanderlines are achieved by rotating the entire unit cell, and the unit cell for sheets\n",
     "2 and 4 are not square.  Since the periodicity of the sheets in the structure varies from sheet\n",
     "to sheet, higher order Floquet modes common to neighboring sheets cannot be defined, so we are forced\n",
-    "to use only the dominant (0,0) modes which are independent of the periodicity.  This is a limitation\n",
-    "which could be removed in the future using the same technique employed in the paper to enable full-wave\n",
-    "analysis with the commercial tools.  Meanwhile, it is of interest to note that their high-accuracy runs\n",
+    "to use only the dominant (0,0) modes which are independent of the periodicity.  This limitation is removed\n",
+    "in a later example.\n",
+    "Meanwhile, it is of interest to note that their high-accuracy runs\n",
     "required 10 hours for CST and 19 hours for COMSOL on large engineering workstations.  The PSSFSS run\n",
     "took about 60 seconds on my desktop machine."
    ],
@@ -397,7 +488,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "It would probably be possible to do improve the performance somewhat over the 12-18 GHz band by tapering the\n",
+    "It would probably be possible to do improve the performance somewhat over the 12-18 GHz band by weighting the\n",
+    "various contributions to the objective function and/or tapering the\n",
     "requirements of the objective function at the band edges.  Also, in a serious design effort, several additional\n",
     "runs of the optimizer should be attempted, since results vary for stochastic algorithms like CMAES."
    ],
