--- a/docs/notebooks/band_pass_filter.ipynb
+++ b/docs/notebooks/band_pass_filter.ipynb
@@ -71,8 +71,7 @@
     "         legend=:left, title=\"Loaded Cross Band-Pass Filter\", xtick=0:2:20, ytick=-30:5:0,\n",
     "         xlim=(-0.1,20.1), ylim=(-35,0.1))\n",
     "plot!(p, data[:,1], data[:,3], label=\"PSSFSS\", color=:red)\n",
-    "plot!(p, dat[:,1], dat[:,2], label=\"CST\", color=:blue)\n",
-    "p"
+    "plot!(p, dat[:,1], dat[:,2], label=\"CST\", color=:blue)"
    ],
    "metadata": {},
    "execution_count": null
@@ -85,8 +84,7 @@
     "          legend=:bottom, title=\"Loaded Cross Band-Pass Filter\", xtick=0:2:20, ytick=-80:10:0,\n",
     "         xlim=(-0.1,20.1), ylim=(-80,0.1))\n",
     "plot!(p2, data[:,1], data[:,2], label=\"PSSFSS\", color=:red)\n",
-    "plot!(p2, dat[:,1], dat[:,4], label=\"CST\", color=:blue)\n",
-    "p2"
+    "plot!(p2, dat[:,1], dat[:,4], label=\"CST\", color=:blue)"
    ],
    "metadata": {},
    "execution_count": null
@@ -101,7 +99,7 @@
     "this fact in making the analysis more efficient.  In fact, if both sheets had been embedded\n",
     "in similar dielectric claddings (in the same order), then the GSM (generalized scattering matrix)\n",
     "computed for the sheet in its first location could be reused without additional computation for its\n",
-    "second location.  In this case, though, only the spatial integrals are re-used.  For a oblique\n",
+    "second location.  In this case, though, only the spatial integrals are re-used.  For an oblique\n",
     "incidence case, computing the spatial integrals is often the most expensive part of the analysis,\n",
     "so the savings from reusing the same sheet definition can be substantial."
    ],
